# cocos2d-x

./: CMakeLists.txt
cmake/Modules/: CocosBuildHelpers.cmake
cocos/: CMakeLists.txt  cocos2d.h
cocos/audio/: AudioEngine.cpp  CMakeLists.txt
cocos/audio/include/: AudioEngine.h
cocos/audio/ohos/: AssetFd.cpp  AssetFd.h  AudioBufferProvider.h  AudioDecoder.cpp  AudioDecoder.h  AudioDecoderMp3.cpp  AudioDecoderMp3.h  AudioDecoderOgg.cpp  AudioDecoderOgg.h  AudioDecoderProvider.cpp  AudioDecoderProvider.h  AudioDecoderSLES.cpp  AudioDecoderSLES.h  AudioDecoderWav.cpp  AudioDecoderWav.h  AudioEngine-inl.cpp  AudioEngine-inl.h  AudioPlayerProvider.cpp  AudioPlayerProvider.h  IVolumeProvider.h  Macros.h  OpenSLHelper.h  PcmAudioPlayer.cpp  PcmAudioPlayer.h  PcmAudioService.cpp  PcmAudioService.h  PcmBufferProvider.cpp  PcmBufferProvider.h  PcmData.cpp  PcmData.h  SimpleAudioEngine.cpp  Track.cpp  Track.h  UrlAudioPlayer.cpp  Value.h
cocos/audio/ohos/audio_utils/: AudioEngine-ohos.h  RefCounted.h
cocos/audio/ohos/utils/: Utils.h
cocos/base/: CCRefPtr.h
cocos/network/: CMakeLists.txt  WebSocket.cpp
cocos/platform/: CCApplication.h  CCApplicationProtocol.h  CCFileUtils.cpp  CCFileUtils.h  CCGL.h  CCImage.cpp  CCPlatformConfig.h  CCPlatformDefine.h  CCPlatformMacros.h  CCStdC.h  CMakeLists.txt
cocos/platform/ohos/: CCApplication-ohos.cpp  CCApplication-ohos.h  CCArkDisplay.cpp  CCArkDisplay.h  CCArkEditBox.cpp  CCArkEditBox.h  CCArkJsDialog.cpp  CCArkJsDialog.h  CCArkJsLanguage.cpp  CCArkJsLanguage.h  CCArkJsVideoPlay.cpp  CCArkJsVideoPlay.h  CCArkJsWant.cpp  CCArkJsWant.h  CCArkWebView.cpp  CCArkWebView.h  CCCommon-ohos.cpp  CCDevice-ohos.cpp  CCFileUtils-ohos.cpp  CCFileUtils-ohos.h  CCGL-ohos.h  CCGLViewImpl-ohos.cpp  CCGLViewImpl-ohos.h  CCPlatformDefine-ohos.h  CCStdC-ohos.h  CCTextBitmap.cpp  CCTextBitmap.h
cocos/platform/ohos/libcocos2dx/src/main/ets/components/common/: Constants.ts
cocos/platform/ohos/libcocos2dx/src/main/ets/components/dialog/: CCDialogWorkerUtils.ts
cocos/platform/ohos/libcocos2dx/src/main/ets/components/display/: getDpi.ts
cocos/platform/ohos/libcocos2dx/src/main/ets/components/editbox/: CocosEditBox.ts  TextInputDialogUtils.ets
cocos/platform/ohos/libcocos2dx/src/main/ets/components/language/: LanguageUtils.ts
cocos/platform/ohos/libcocos2dx/src/main/ets/components/sensor/: AccelerometerUtils.ts
cocos/platform/ohos/libcocos2dx/src/main/ets/components/thread/: ThreadUtils.ts
cocos/platform/ohos/libcocos2dx/src/main/ets/components/videoplayer/: VideoPlayerInfo.ts  VideoPlayerMsg.ts
cocos/platform/ohos/libcocos2dx/src/main/ets/components/want/: WantUtils.ts
cocos/platform/ohos/libcocos2dx/src/main/ets/components/webview/: WebView.ts  WebViewMsg.ts
cocos/platform/ohos/napi/: CMakeLists.txt  plugin_manager.cpp  plugin_manager.h
cocos/platform/ohos/napi/modules/: AcceleratorCocos2dx.cpp  AcceleratorCocos2dx.h  Cocos2dxHelper.cpp  Cocos2dxHelper.h  CocosPlayClient.cpp  EditBoxNapi.cpp  EditBoxNapi.h  RawFileUtils.cpp  RawFileUtils.h  WebViewNapi.cpp  WebViewNapi.h
cocos/platform/ohos/napi/render/: egl_core.cpp  plugin_render.cpp
cocos/renderer/: CCRenderer.cpp  CCTextureAtlas.cpp
cocos/scripting/lua-bindings/: CMakeLists.txt
cocos/scripting/lua-bindings/auto/: lua_cocos2dx_controller_auto.cpp  lua_cocos2dx_controller_auto.hpp
cocos/scripting/lua-bindings/manual/: CCLuaStack.cpp
cocos/scripting/lua-bindings/manual/ui/: lua_cocos2dx_experimental_video_manual.hpp  lua_cocos2dx_ui_manual.cpp
cocos/scripting/lua-bindings/manual/video/: lua_cocos2dx_experimental_video_manual.cpp
cocos/scripting/lua-bindings/script/cocos2d/: Cocos2dConstants.lua
cocos/ui/: CMakeLists.txt  CocosGUI.h  UIHelper.cpp  UIHelper.h  UIVideoPlayer-ohos.cpp  UIVideoPlayer.h  UIWebView.cpp  UIWebView.h  UIWebViewImpl-ohos.cpp  UIWebViewImpl-ohos.h
cocos/ui/UIEditBox/: UIEditBoxImpl-ohos.cpp  UIEditBoxImpl-ohos.h
extensions/: CMakeLists.txt
extensions/GUI/CCControlExtension/: CCControl.cpp  CCControl.h
extensions/GUI/CCScrollView/: CCScrollView.cpp  CCTableView.cpp
extensions/assets-manager/: AssetsManager.cpp  AssetsManagerEx.cpp
tests/cpp-tests/: CMakeLists.txt
tests/cpp-tests/Classes/: tests.h
tests/cpp-tests/Classes/UITest/CocoStudioGUITest/: CocosGUIScene.cpp  UISceneManager.cpp  UISceneManager.h
tests/cpp-tests/Classes/UITest/CocoStudioGUITest/UIVideoPlayerTest/: UIVideoPlayerTest.cpp
tests/cpp-tests/Classes/UITest/CocoStudioGUITest/UIWebViewTest/: UIWebViewTest.cpp
tests/cpp-tests/proj.ohos/: .gitignore  build-profile.json5  package.json
tests/cpp-tests/proj.ohos/AppScope/: app.json5
tests/cpp-tests/proj.ohos/AppScope/resources/base/element/: string.json
tests/cpp-tests/proj.ohos/entry/: package.json
tests/cpp-tests/proj.ohos/entry/src/main/: module.json5
tests/cpp-tests/proj.ohos/entry/src/main/cpp/: CMakeLists.txt  main.cpp  napi_init.cpp
tests/cpp-tests/proj.ohos/entry/src/main/ets/common/: Constants.ts
tests/cpp-tests/proj.ohos/entry/src/main/ets/components/: CocosWebview.ets
tests/cpp-tests/proj.ohos/entry/src/main/ets/workers/: CocosWorker.ts
tests/cpp-tests/proj.ohos/entry/src/main/resources/base/element/: string.json
tests/lua-tests/project/: CMakeLists.txt
tests/lua-tests/project/Classes/: AppDelegate.cpp
tests/lua-tests/project/proj.ohos/: build-profile.json5  package.json
tests/lua-tests/project/proj.ohos/AppScope/: app.json5
tests/lua-tests/project/proj.ohos/AppScope/resources/base/element/: string.json
tests/lua-tests/project/proj.ohos/entry/: package.json
tests/lua-tests/project/proj.ohos/entry/src/main/cpp/: CMakeLists.txt
tests/lua-tests/project/proj.ohos/entry/src/main/ets/MainAbility/: MainAbility.ts
tests/lua-tests/project/proj.ohos/entry/src/main/ets/components/: CocosVideoPlayer.ets
tests/lua-tests/project/proj.ohos/entry/src/main/ets/pages/: Index.ets
tests/lua-tests/project/proj.ohos/entry/src/main/ets/workers/: CocosWorker.ts  WorkerManager.ets
tests/lua-tests/src/: mainMenu.lua
tests/lua-tests/src/ByteCodeEncryptTest/: ByteCodeEncryptTest.lua
